# erp-mrsul

./: .gitignore  Base Materiais.xlsx  DEVELOPMENT.md  MCP_INSTRUCTIONS.md  README.md  builder.config.json  claude_desktop_config.json  package-lock.json  package.json  setup_mcp.bat  tsconfig.json
erp_mrsul/: GUIA_DE_TESTE.md  LOGS_E_INTERFACE_MELHORIAS.md  PROJETOS_IMPLEMENTACAO.md  RESUMO_EXECUTIVO.md  check_voucher.js  create-table.html  package-lock.json  package.json  test_data.sql  tsconfig.json  vite.config.ts
erp_mrsul/src/: App.tsx  index.css  main.tsx
erp_mrsul/src-tauri/: Cargo.toml  tauri.conf.json
erp_mrsul/src-tauri/capabilities/: default.json
erp_mrsul/src-tauri/database/: MAPEAMENTO_PEDIDOS_COMPRA_COMPLETO.md  README.md  RESUMO_FINAL_MIGRACAO_CUSTOS.md  StockMovementForm.md  StockMovementList.md  TESTE_NOVO_FORMATO_EXPORTACAO.md  analise-custos.js  check-comprovante-field.cjs  check-db.cjs  check-db.js  check-purchase-orders-db.cjs  check-status-constraints.cjs  check-table-structure.cjs  check_schema.cjs  check_schema.js  claude_desktop_config.json  consultar-dados.js  corrigir-numeracao-completo.cjs  corrigir-schema-fornecedor.cjs  corrigir-schema-seguro.cjs  corrigir-trigger-numero-pedido.cjs  extract-pdf.js  (+57 more)
erp_mrsul/src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
erp_mrsul/src-tauri/src-tauri/src/: db.rs  error.rs  main.rs
erp_mrsul/src-tauri/src-tauri/src/commands/: material_classes.rs  mod.rs
erp_mrsul/src-tauri/src-tauri/src/models/: material_class.rs  mod.rs
src-tauri/: tauri.conf.json
src/components/: Header.tsx  Layout.tsx
(+62 files in other folders)
